--- a/public/login.html
+++ b/public/login.html
@@ -24,9 +24,9 @@
 
     <div class="w-full max-w-sm mx-auto">
         <div class="p-8 space-y-6 bg-white rounded-2xl shadow-lg">
-            <header>
-                <h1 class="text-3xl font-bold text-center text-gray-800">打刻システム</h1>
-                <p class="text-center text-gray-500 mt-2">ログインまたは新規登録</p>
+            <!-- ★★★ ロゴに差し替え ★★★ -->
+            <header class="flex justify-center mb-4">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16">
             </header>
             <div class="space-y-4">
                 <div id="login-error" class="text-red-500 text-sm text-center"></div>
@@ -37,7 +37,6 @@
                 </form>
                 <div class="flex items-center justify-center my-4">
                     <hr class="w-full border-gray-300">
-                    <!-- ★★★ 修正点 ★★★ -->
                     <span class="px-2 text-xs text-gray-500 bg-white whitespace-nowrap">または</span>
                     <hr class="w-full border-gray-300">
                 </div>
