--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <base target="_top">
-    <title>Timestamps</title>
+    <title>side pocket</title>
     <link rel="icon" href="images/sidepocket_symbol.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -54,17 +54,13 @@
     <div id="app-container" class="w-full" style="display: none;">
         <!-- Header -->
         <header class="w-full max-w-4xl mx-auto mb-4 flex justify-between items-center">
-            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-14">
-            <div class="flex items-center gap-3">
-                <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
-                    <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
-                    <span id="user-display-name"></span>
-                </a>
+            <!-- ★★★ Left Group: Menu and Logo ★★★ -->
+            <div class="flex items-center gap-4">
                 <div class="relative">
                     <button id="menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
                     </button>
-                    <div id="dropdown-menu" class="absolute right-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
+                    <div id="dropdown-menu" class="absolute left-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
                         <button id="menu-home" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</button>
                         <button id="menu-calendar" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</button>
                         <button id="menu-summary" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</button>
@@ -73,6 +69,16 @@
                         <button id="logoutBtn" class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">ログアウト</button>
                     </div>
                 </div>
+                <a href="index.html">
+                    <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-14">
+                </a>
+            </div>
+            <!-- Right Group: User Info -->
+            <div class="flex items-center gap-3">
+                <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
+                    <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
+                    <span id="user-display-name"></span>
+                </a>
             </div>
         </header>
 
@@ -290,7 +296,8 @@
         const menuButton = document.getElementById('menu-button');
         const dropdownMenu = document.getElementById('dropdown-menu');
 
-        menuButton.addEventListener('click', () => {
+        menuButton.addEventListener('click', (e) => {
+            e.stopPropagation();
             dropdownMenu.classList.toggle('hidden');
         });
 
@@ -391,7 +398,6 @@
             });
         }
         
-        // ★★★ 修正点: この関数をグローバルスコープに移動 ★★★
         function updateProjectDropdown(projects) {
             const activeProjects = projects.filter(p => p.status === 'Active');
             const optionsHtml = activeProjects.map(p => `<option value="${p.code}" data-name="${p.name}">${p.code}: ${p.name}</option>`).join('');
