--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ログイン - 打刻アプリ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/sidepocket_symbol.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
@@ -24,7 +25,6 @@
 
     <div class="w-full max-w-sm mx-auto">
         <div class="p-8 space-y-6 bg-white rounded-2xl shadow-lg">
-            <!-- ★★★ ロゴに差し替え ★★★ -->
             <header class="flex justify-center mb-4">
                 <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16">
             </header>
@@ -51,17 +51,16 @@
         </div>
     </div>
 
-    <!-- Firebase SDK -->
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+        import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
             projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.firebasestorage.app",
+            storageBucket: "side-pocket-sl.appspot.com",
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
             measurementId: "G-QSBDN1TX68"
@@ -109,7 +108,7 @@
                         lastName: nameParts[0] || '',
                         firstName: nameParts[1] || '',
                         displayName: user.displayName,
-                        photoURL: user.photoURL,
+                        photoURL: user.photoURL || 'images/sidepocket_symbol.png',
                         createdAt: serverTimestamp()
                     });
                 }
