--- a/public/projects.html
+++ b/public/projects.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>プロジェクト管理 - side pocket</title>
-    <link rel="icon" href="images/sidepocket_symbol.png">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
-        :root { --main-color: #698966; --main-color-dark: #5a7d58; }
-        body { font-family: 'Noto Sans JP', sans-serif; }
-        .btn { transition: all 0.2s ease-in-out; }
-        .btn:hover { transform: translateY(-2px); }
-        .bg-main { background-color: var(--main-color); }
-        .hover\:bg-main-dark:hover { background-color: var(--main-color-dark); }
-        .text-main { color: var(--main-color); }
-        .switch { position: relative; display: inline-block; width: 60px; height: 34px; }
-        .switch input { opacity: 0; width: 0; height: 0; }
-        .slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; transition: .4s; border-radius: 34px; }
-        .slider:before { position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: white; transition: .4s; border-radius: 50%; }
-        input:checked + .slider { background-color: var(--main-color); }
-        input:checked + .slider:before { transform: translateX(26px); }
-        .loader { border: 4px solid #f3f3f3; border-top: 4px solid var(--main-color); border-radius: 50%; width: 30px; height: 30px; animation: spin 1s linear infinite; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    </style>
-</head>
+<header class="w-full max-w-4xl mx-auto mb-4 flex justify-between items-center">
+    <a href="index.html"><img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-14"></a>
+    <div class="flex items-center gap-3">
+        <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
+            <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
+            <span id="user-display-name"></span>
+        </a>
+        <div class="relative">
+            <button id="menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
+            </button>
+            <div id="dropdown-menu" class="absolute right-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
+                <a href="index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</a>
+                <a href="calendar.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</a>
+                <a href="summary.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</a>
+                <a href="projects.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロジェクト管理</a>
+                <div class="border-t border-gray-100"></div>
+                <button id="logoutBtn" class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">ログアウト</button>
+            </div>
+        </div>
+    </div>
+</header>
 <body class="bg-gray-100 min-h-screen p-4">
 
     <div id="loading" class="flex justify-center items-center h-screen">
@@ -44,10 +41,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
                     </button>
                     <div id="dropdown-menu" class="absolute right-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
-                        <button id="menu-home" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</button>
-                        <button id="menu-calendar" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</button>
-                        <button id="menu-summary" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</button>
-                        <button id="menu-projects" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロジェクト管理</button>
+                        <a href="index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</a>
+                        <a href="calendar.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</a>
+                        <a href="summary.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</a>
+                        <a href="projects.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロジェクト管理</a>
                         <div class="border-t border-gray-100"></div>
                         <button id="logoutBtn" class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">ログアウト</button>
                     </div>
@@ -95,7 +92,7 @@
                 showStatus("プロジェクトリストの取得に失敗しました。", true, 'projectManagementStatus');
             });
         }
-
+        
         function renderProjectItem(p) {
             return `<div class="project-item flex justify-between items-center p-3 border-b gap-2 rounded-lg bg-white shadow-sm" data-project-id="${p.id}">
                 <input type="color" class="project-color-input p-1 h-10 w-10 block bg-white border border-gray-200 cursor-pointer rounded-lg" value="${p.color || '#698966'}">
@@ -109,7 +106,7 @@
                 </div>
             </div>`;
         }
-
+        
         function renderProjectList(projects) {
             const container = document.getElementById('projectListContainer');
             projectDataMap.clear();
