Headerのパーツ化

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>打刻 - side pocket</title>
-    <link rel="icon" href="images/sidepocket_symbol.png">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!-- 共通スタイルを読み込む -->
-</head>
+<div id="header-placeholder"></div>
 <body class="bg-gray-100 min-h-screen p-4">
 
     <div id="loading" class="flex justify-center items-center h-screen">
