--- a/public/profile.html
+++ b/public/profile.html
@@ -4,141 +4,173 @@
     <meta charset="UTF-8">
     <title>プロフィール管理 - 打刻アプリ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/sidepocket_symbol.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
-        :root {
-            --main-color: #698966;
-            --main-color-dark: #5a7d58;
-        }
-        body { font-family: 'Noto Sans JP', sans-serif; }
-        .btn { transition: all 0.2s ease-in-out; }
-        .btn:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        .bg-main { background-color: var(--main-color); }
-        .hover\:bg-main-dark:hover { background-color: var(--main-color-dark); }
-        .text-main { color: var(--main-color); }
-        .ring-main:focus { ring-color: var(--main-color); }
-        .border-main { border-color: var(--main-color); }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+<body class="bg-gray-100 min-h-screen p-4">
+    
+    <!-- ★★★ 修正点：共通ヘッダーを読み込むためのプレースホルダーを追加しました ★★★ -->
+    <div id="header-placeholder"></div>
 
-    <div id="profileView" class="w-full max-w-lg mx-auto">
-        <div class="p-8 space-y-6 bg-white rounded-2xl shadow-lg">
-            <header class="flex justify-between items-center">
-                <h1 class="text-3xl font-bold text-gray-800">プロフィール管理</h1>
-                <a href="index.html" class="btn px-4 py-2 text-base font-semibold text-gray-700 bg-gray-200 rounded-lg hover:bg-gray-300 no-underline">戻る</a>
-            </header>
-            <form id="profile-form" class="space-y-4">
-                <div class="flex items-center space-x-4">
-                    <img id="user-icon-preview" src="https://placehold.co/96x96/EFEFEF/333333?text=?" class="w-24 h-24 rounded-full object-cover bg-gray-200">
-                    <label class="block">
-                        <span class="sr-only">Choose profile photo</span>
-                        <input type="file" id="icon-file" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-violet-50 file:text-main hover:file:bg-violet-100"/>
-                    </label>
+    <div id="loading" class="flex justify-center items-center h-screen">
+        <div class="loader"></div><p class="ml-4 text-lg">読み込んでいます...</p>
+    </div>
+    
+    <div id="app-container" class="w-full" style="display: none;">
+        <main class="w-full max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-md">
+            <h1 class="text-2xl font-bold mb-6">プロフィール管理</h1>
+            <form id="profile-form">
+                <div class="space-y-6">
+                    <!-- User Icon -->
+                    <div class="flex flex-col items-center">
+                        <img id="user-icon-preview" src="https://placehold.co/96x96/EFEFEF/333333?text=?" class="w-24 h-24 rounded-full object-cover bg-gray-200 mb-4 border-2 border-gray-300">
+                        <label for="icon-upload" class="cursor-pointer bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-main">
+                            <span>アイコンを変更</span>
+                            <input id="icon-upload" name="icon-upload" type="file" class="sr-only" accept="image/*">
+                        </label>
+                    </div>
+
+                    <!-- Name Fields -->
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div>
+                            <label for="lastName" class="block text-sm font-medium text-gray-700">姓</label>
+                            <input type="text" name="lastName" id="lastName" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-main focus:border-main">
+                        </div>
+                        <div>
+                            <label for="firstName" class="block text-sm font-medium text-gray-700">名</label>
+                            <input type="text" name="firstName" id="firstName" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-main focus:border-main">
+                        </div>
+                    </div>
+
+                    <!-- Display Name -->
+                    <div>
+                        <label for="displayName" class="block text-sm font-medium text-gray-700">ディスプレイ名</label>
+                        <input type="text" name="displayName" id="displayName" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-main focus:border-main">
+                    </div>
+
+                    <!-- Email -->
+                    <div>
+                        <label for="email" class="block text-sm font-medium text-gray-700">メールアドレス</label>
+                        <input type="email" name="email" id="email" disabled class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm bg-gray-100 text-gray-500">
+                    </div>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <input type="text" id="last-name" placeholder="姓" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 ring-main">
-                    <input type="text" id="first-name" placeholder="名" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 ring-main">
+
+                <div class="mt-8">
+                    <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-main hover:bg-main-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-main btn">
+                        更新する
+                    </button>
                 </div>
-                <input type="text" id="display-name" placeholder="ディスプレイ名" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 ring-main">
-                <input type="email" id="email" placeholder="メールアドレス" disabled class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-gray-100 text-gray-500">
-                <button type="submit" id="updateProfileBtn" class="w-full btn bg-main text-white font-bold py-3 rounded-lg hover:bg-main-dark">更新</button>
+                <div id="profile-status" class="text-center mt-4 text-sm"></div>
             </form>
-            <div id="profile-status" class="text-center font-medium h-5"></div>
-        </div>
+        </main>
     </div>
 
+    <!-- ★★★ 修正点：スクリプト全体を shared.js を利用する形に書き換えました ★★★ -->
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, updateProfile } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-        import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
+        import { initializePage, db, auth } from './shared.js';
+        import { doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+        import { updateProfile } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
-            authDomain: "side-pocket-sl.firebaseapp.com",
-            projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.firebasestorage.app",
-            messagingSenderId: "887116583823",
-            appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
-            measurementId: "G-QSBDN1TX68"
-        };
+        const storage = getStorage();
 
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-        const storage = getStorage(app);
-
-        let currentUser = null;
-
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                currentUser = user;
-                const userDocRef = doc(db, "users", user.uid);
-                const userDoc = await getDoc(userDocRef);
-
-                if (userDoc.exists()) {
-                    const data = userDoc.data();
-                    document.getElementById('last-name').value = data.lastName || '';
-                    document.getElementById('first-name').value = data.firstName || '';
-                    document.getElementById('display-name').value = data.displayName || '';
-                    document.getElementById('email').value = user.email;
-                    document.getElementById('user-icon-preview').src = data.photoURL || `https://placehold.co/96x96/EFEFEF/333333?text=${(data.displayName || '?').charAt(0)}`;
-                }
-            } else {
-                window.location.href = 'login.html';
-            }
-        });
-
-        document.getElementById('profile-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            if (!currentUser) return;
-
-            const lastName = document.getElementById('last-name').value;
-            const firstName = document.getElementById('first-name').value;
-            const displayName = document.getElementById('display-name').value;
-            const iconFile = document.getElementById('icon-file').files[0];
+        // ページのメイン処理
+        async function setupProfilePage(user) {
+            const userIconPreview = document.getElementById('user-icon-preview');
+            const iconUploadInput = document.getElementById('icon-upload');
+            const lastNameInput = document.getElementById('lastName');
+            const firstNameInput = document.getElementById('firstName');
+            const displayNameInput = document.getElementById('displayName');
+            const emailInput = document.getElementById('email');
+            const profileForm = document.getElementById('profile-form');
             const statusDiv = document.getElementById('profile-status');
 
-            if (!lastName || !firstName || !displayName) {
-                statusDiv.textContent = '姓、名、ディスプレイ名は必須項目です。';
-                statusDiv.style.color = 'red';
-                return;
+            // フォームに現在のユーザー情報を設定
+            userIconPreview.src = user.photoURL || 'https://placehold.co/96x96/EFEFEF/333333?text=?';
+            displayNameInput.value = user.displayName || '';
+            emailInput.value = user.email || '';
+
+            // Firestoreから姓・名を取得
+            const userDocRef = doc(db, "users", user.uid);
+            try {
+                const docSnap = await getDoc(userDocRef);
+                if (docSnap.exists()) {
+                    const data = docSnap.data();
+                    lastNameInput.value = data.lastName || '';
+                    firstNameInput.value = data.firstName || '';
+                }
+            } catch(e) {
+                console.error("Error getting user document:", e);
             }
 
-            statusDiv.textContent = '更新中...';
-            statusDiv.style.color = 'black';
+            // アイコン画像プレビュー処理
+            iconUploadInput.addEventListener('change', (e) => {
+                const file = e.target.files[0];
+                if (file) {
+                    const reader = new FileReader();
+                    reader.onload = (event) => {
+                        userIconPreview.src = event.target.result;
+                    };
+                    reader.readAsDataURL(file);
+                }
+            });
 
-            try {
-                let photoURL = currentUser.photoURL;
-                if (iconFile) {
-                    const storageRef = ref(storage, `user_icons/${currentUser.uid}/${iconFile.name}`);
-                    const snapshot = await uploadBytes(storageRef, iconFile);
-                    photoURL = await getDownloadURL(snapshot.ref);
+            // フォーム送信処理
+            profileForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const lastName = lastNameInput.value.trim();
+                const firstName = firstNameInput.value.trim();
+                const displayName = displayNameInput.value.trim();
+                const iconFile = iconUploadInput.files[0];
+
+                if (!lastName || !firstName || !displayName) {
+                    statusDiv.textContent = '姓、名、ディスプレイ名は必須項目です。';
+                    statusDiv.className = 'text-sm text-red-600 mt-4';
+                    return;
                 }
 
-                await updateProfile(currentUser, {
-                    displayName: displayName,
-                    photoURL: photoURL
-                });
+                statusDiv.textContent = '更新中...';
+                statusDiv.className = 'text-sm text-gray-600 mt-4';
 
-                const userDocRef = doc(db, "users", currentUser.uid);
-                await setDoc(userDocRef, {
-                    lastName: lastName,
-                    firstName: firstName,
-                    displayName: displayName,
-                    photoURL: photoURL
-                }, { merge: true });
+                try {
+                    let photoURL = user.photoURL;
+                    if (iconFile) {
+                        const storageRef = ref(storage, `user_icons/${user.uid}/${iconFile.name}`);
+                        const snapshot = await uploadBytes(storageRef, iconFile);
+                        photoURL = await getDownloadURL(snapshot.ref);
+                    }
 
-                statusDiv.textContent = 'プロフィールを更新しました！';
-                statusDiv.style.color = 'green';
+                    await updateProfile(user, {
+                        displayName: displayName,
+                        photoURL: photoURL
+                    });
 
-            } catch (error) {
-                statusDiv.textContent = '更新に失敗しました: ' + error.message;
-                statusDiv.style.color = 'red';
-            }
-        });
+                    await setDoc(userDocRef, {
+                        lastName: lastName,
+                        firstName: firstName,
+                        displayName: displayName,
+                        photoURL: photoURL
+                    }, { merge: true });
+
+                    statusDiv.textContent = 'プロフィールを更新しました！';
+                    statusDiv.className = 'text-sm text-green-600 mt-4';
+
+                    // ヘッダーの表示も更新するために少し待ってからリロード
+                    setTimeout(() => location.reload(), 1000);
+
+                } catch (error) {
+                    statusDiv.textContent = '更新に失敗しました: ' + error.message;
+                    statusDiv.className = 'text-sm text-red-600 mt-4';
+                }
+            });
+
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById('app-container').style.display = 'block';
+        }
+
+        // 共通の初期化処理を呼び出し、認証完了後にプロフィールページの処理を実行
+        initializePage(setupProfilePage);
     </script>
 </body>
 </html>
