--- a/public/_header.html
+++ b/public/_header.html
@@ -1,29 +1,31 @@
-<header class="w-full max-w-4xl mx-auto mb-4 flex justify-between items-center">
-    <!-- Logo -->
-    <a href="index.html">
-        <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16">
-    </a>
-
-    <!-- Right Group: User Info & Menu -->
-    <div class="flex items-center gap-3">
-        <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
-            <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
-            <span id="user-display-name"></span>
-        </a>
+<header class="w-full max-w-4xl mx-auto mb-4 flex items-center">
+    <!-- Left Group: Menu -->
+    <div class="w-1/3">
         <div class="relative">
             <button id="menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
             </button>
-            <div id="dropdown-menu" class="absolute right-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
+            <div id="dropdown-menu" class="absolute left-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
                 <a href="index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</a>
-                <a href="calender.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</a>
+                <a href="calendar.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</a>
                 <a href="summary.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</a>
                 <a href="projects.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロジェクト管理</a>
-                <div class="border-t border-gray-100"></div>
-                <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロフィール管理</a>
                 <div class="border-t border-gray-100"></div>
                 <button id="logoutBtn" class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">ログアウト</button>
             </div>
         </div>
+    </div>
+    <!-- Center Group: Logo -->
+    <div class="w-1/3 flex justify-center">
+        <a href="index.html">
+            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-14">
+        </a>
+    </div>
+    <!-- Right Group: User Info -->
+    <div class="w-1/3 flex justify-end">
+        <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
+            <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
+            <span id="user-display-name"></span>
+        </a>
     </div>
 </header>
